--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -39,7 +39,7 @@
   }
 
   &__container {
-      margin-bottom: auto;
+      margin: 0 auto;
       @include tablet {
         display: flex;
         align-items: center;
@@ -49,12 +49,24 @@
           padding-right: 4rem;
       }
   }
+
+  &__title {
+    text-align: center;
+    font-family: $yaseva;
+    color: $color-text-primary;
+
+    @include tablet {
+    font-size: 1.5rem;
+    }
+  }
+
   &__heading {
-      font-size: 1.6rem;
+    color: $color-text-primary;
+      font-size: 1.2rem;
       line-height: 2.25rem;
       font-weight: 600;
       @include tablet {
-      font-size: 2rem;
+      font-size: 1.5rem;
       line-height: 2.5rem;
       margin: 0;
       }
@@ -82,9 +94,10 @@
   }
 
   &__cancel {
-    display: none;
+  display: none;
     cursor: pointer;
     @include tablet {
+      display: inline-block;
       text-decoration: none;
       color:$color-background-secondary;
 
